# uman_shell

./: README.adoc  README.md  pyproject.toml
modern_shell/: __init__.py  archive_actions.py  file_actions.py
tests/: test_archive.py  test_directory.py  test_file.py
uman_shell/: __init__.py  directory_actions.py  file_actions.py
